# python-project-lvl1

./: Makefile  README.md  pyproject.toml  setupe.cft
.github/workflows/: pyci.yml
brain_games/scripts/: brain_even.py  brain_games.py  cli.py  functions_for_brain_calc.py  functions_for_brain_even.py  functions_for_brain_gcd.py  functions_for_brain_prime.py  functions_for_brain_progression.py  general_functions.py
brain_games/scripts/games/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
